操作日子： （1）修复服务区店铺/视频/视频地址添加BUG
————————————高投管理后端操作日志————————————

--- a/src/app/business/cash/cash.component.html
+++ b/src/app/business/cash/cash.component.html
@@ -60,7 +60,7 @@
           <label >所属服务区：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown [options]="addServicesAreaTrees" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择服务区..."></p-dropdown>
+          <p-dropdown #addSer [options]="addServicesAreaTrees" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择服务区..."></p-dropdown>
         </div>
       </div>
       <!--上下行-->
@@ -69,7 +69,7 @@
           <label >上下行：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" placeholder="请选择高速方向..."></p-dropdown>
+          <p-dropdown #addDirec [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" placeholder="请选择高速方向..."></p-dropdown>
         </div>
       </div>
       <!--所属店铺-->
@@ -78,7 +78,7 @@
           <label for="addcolor">所属店铺：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown [options]="storeList" (onChange)="storeChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" placeholder="请选择店铺..."></p-dropdown>
+          <p-dropdown #addStore [options]="storeList" (onChange)="storeChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" placeholder="请选择店铺..."></p-dropdown>
         </div>
       </div>
       <!--收银机编号-->
@@ -237,7 +237,7 @@
           <label >所属服务区：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown [options]="addServicesAreaTrees" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" [placeholder]="this.modifyCash.serviceArea.serviceName"></p-dropdown>
+          <p-dropdown #modifySer [options]="addServicesAreaTrees" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" [placeholder]="this.modifyCash.serviceArea.serviceName"></p-dropdown>
         </div>
       </div>
       <!--上下行-->
@@ -246,7 +246,7 @@
           <label >上下行：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" [placeholder]="this.modifyhighsdData"></p-dropdown>
+          <p-dropdown #modifyDirec [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" [placeholder]="this.modifyhighsdData"></p-dropdown>
         </div>
       </div>
       <!--所属店铺-->
@@ -255,7 +255,7 @@
           <label >所属店铺：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown [options]="storeList" (onChange)="storeChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" [placeholder]="this.modifyCash.store.storeName"></p-dropdown>
+          <p-dropdown #modifyStore [options]="storeList" (onChange)="storeChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" [placeholder]="this.modifyCash.store.storeName"></p-dropdown>
         </div>
       </div>
       <!--收银机编号-->
