--- a/src/app/business/store/store.component.html
+++ b/src/app/business/store/store.component.html
@@ -63,7 +63,7 @@
           <label for="addserviceAreaId1">所属服务区：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown   id="addserviceAreaId1" [options]="addServicesAreas" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择服务区..."></p-dropdown>
+          <p-dropdown  #addserviceAreaId1 id="addserviceAreaId1" [options]="addServicesAreas" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择服务区..."></p-dropdown>
         </div>
       </div>
       <!--上下行-->
