操作日志： (1)  收银机模块修改整理 (2)  字典模块修改整理 (3)  卡口模块修改整理 (4)  事件类型模块修改整理 (5)  wifi管理模块修改整理 (5)  wifi管理模块修改整理 (5)  应用访问控制模块修改整理
————————————高投管理后端操作日志————————————

--- a/src/app/business/apply/apply.component.html
+++ b/src/app/business/apply/apply.component.html
@@ -32,7 +32,7 @@
   </p-scrollPanel>
 
   <!--增加弹框-->
-  <p-dialog header="增加信息" [(visible)]="addDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="900">
+  <p-dialog header="增加信息" [(visible)]="addDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="900" (onHide)="clearData()">
     <div class="ui-g ui-fluid">
       <!--应用名称-->
       <div class="ui-g-6">
@@ -81,7 +81,7 @@
       </div>
     </p-footer>
   </p-dialog>
-  <p-dialog header="修改信息" [(visible)]="modifyDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="900">
+  <p-dialog header="修改信息" [(visible)]="modifyDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="900" (onHide)="clearData()">
     <div class="ui-g ui-fluid">
       <!--应用名称-->
       <div class="ui-g-6">
