--- a/src/app/business/dict/dict-list/dict-list.component.html
+++ b/src/app/business/dict/dict-list/dict-list.component.html
@@ -38,7 +38,7 @@
   </p-scrollPanel>
 
   <!--增加弹框-->
-  <p-dialog header="增加信息" [(visible)]="addDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="800">
+  <p-dialog header="增加信息" [(visible)]="addDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="800" (onHide)="clearData()">
     <div class="ui-g ui-fluid">
       <!--字典编码-->
       <div class="ui-g-6">
