--- a/src/app/business/wifi/wifi.component.html
+++ b/src/app/business/wifi/wifi.component.html
@@ -35,7 +35,7 @@
     </p-table>
   </p-scrollPanel>
   <!--增加弹框-->
-  <p-dialog header="增加信息" [(visible)]="addDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="800">
+  <p-dialog header="增加信息" [(visible)]="addDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="800" (onHide)="clearData()">
     <div class="ui-g ui-fluid">
       <!--所属区划-->
       <div class="ui-g-6">
@@ -43,7 +43,7 @@
           <label for="addAreaName">所属区划：</label>
         </div>
         <div class="ui-g-8">
-          <input pInputText id="addAreaName" (click)="AreaTreeClick()" [(ngModel)]="addAreaTree.label" />
+          <input pInputText id="addAreaName" (click)="AreaTreeClick()" [(ngModel)]="this.addArealabel" placeholder="请选择区划..."/>
         </div>
       </div>
       <!--所属服务区-->
@@ -52,7 +52,7 @@
           <label for="addserviceArea">所属服务区：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown id="addserviceArea" [options]="addServicesAreas" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择服务区..."></p-dropdown>
+          <p-dropdown #addserviceArea id="addserviceArea" [options]="addServicesAreas" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择服务区..."></p-dropdown>
         </div>
       </div>
       <!--上下行-->
@@ -61,7 +61,7 @@
           <label for="addsaOrientation">上下行：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown id="addsaOrientation" [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" placeholder="请选择高速方向..."></p-dropdown>
+          <p-dropdown #addsaOrientation id="addsaOrientation" [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" placeholder="请选择高速方向..."></p-dropdown>
         </div>
       </div>
       <!--设备编号-->
@@ -131,7 +131,7 @@
           <label for="addAreaName1">所属区划：</label>
         </div>
         <div class="ui-g-8">
-          <input pInputText id="addAreaName1" (click)="AreaTreeClick()" [(ngModel)]="this.modifyWifi.province.administrativeAreaName" />
+          <input pInputText id="addAreaName1" (click)="AreaTreeClick()" [(ngModel)]="this.modifyWifi.city.administrativeAreaName" />
         </div>
       </div>
       <!--所属服务区-->
@@ -176,7 +176,7 @@
           <label for="devicePositionCode1">位置编号：</label>
         </div>
         <div class="ui-g-8">
-          <input pInputText id="devicePositionCode1" [(ngModel)]="modifyWifi.devicePositionCode" ([value])="this.modifyWifi.devicePositionCode"/>
+          <input pInputText id="devicePositionCode1" [(ngModel)]="this.modifyWifi.devicePositionCode" ([value])="this.modifyWifi.devicePositionCode"/>
         </div>
       </div>
     </div>
