操作日志： (1)  字典模块bug修复 (2)  组织结构模块修改的数据的初始化 (3)  服务区字段管理修改的数据的初始化 (4)  门店管理模块待修改中
————————————高投管理后端操作日志————————————

--- a/src/app/business/dict/dict-word/dict-word.component.html
+++ b/src/app/business/dict/dict-word/dict-word.component.html
@@ -7,7 +7,7 @@
   <h1 class="text-center">字典词条</h1>
   <!--按钮-->
   <div class="btn-manner">
-    <button class="btn btn-primary" (click)="addDialog = true">增加</button>
+    <button class="btn btn-primary" (click)="addDialog = true;this.updateDictType()">增加</button>
     <button class="btn btn-danger" type="button" (click)="deleteFirm()">删除</button>
     <button class="btn btn-success" type="button" (click)="modifyBtn()">修改</button>
     <label for="addAreaName" style="margin-left:  0.5vw;font-size: 1.5rem">字典编码：</label>
