--- a/src/app/business/org/org-company/org-company.component.html
+++ b/src/app/business/org/org-company/org-company.component.html
@@ -203,7 +203,7 @@
           <label for="addAreaName">所属区划：</label>
         </div>
         <div class="ui-g-8">
-          <input pInputText id="addAreaName1" (click)="AreaTreeClick()" [(ngModel)]="this.arealabel"/>
+          <input pInputText id="addAreaName1" (click)="AreaTreeClick()" [(ngModel)]="this.modifyCompany.areaName"/>
         </div>
       </div>
       <div class="ui-g-6">
