--- a/src/app/business/org/org-department/org-department.component.html
+++ b/src/app/business/org/org-department/org-department.component.html
@@ -193,7 +193,7 @@
           <label for="addCompany1">所属公司：</label>
         </div>
         <div class="ui-g-8">
-          <input pInputText  id="addCompany1" (click)="CompanyTreeClick()" [(ngModel)]="this.Companylabel"  [placeholder]="this.modifyDepartment.organizationName">
+          <input pInputText  id="addCompany1" (click)="CompanyTreeClick()" [(ngModel)]="this.modifyDepartment.organizationName" >
         </div>
       </div>
       <div class="ui-g-6">
@@ -201,7 +201,7 @@
           <label for="addOrgs1">所属部门：</label>
         </div>
         <div class="ui-g-8">
-          <input pInputText  id="addOrgs1" (click)="departmentTreeClick()" [(ngModel)]="this.Departmentlabel"  [placeholder]="this.modifyDepartment.pDeptName">
+          <input pInputText  id="addOrgs1" (click)="departmentTreeClick()" [(ngModel)]="this.modifyDepartment.pDeptName" >
         </div>
       </div>
       <div class="ui-g-6">
