--- a/src/app/business/org/org-duty/org-duty.component.html
+++ b/src/app/business/org/org-duty/org-duty.component.html
@@ -135,7 +135,7 @@
           <label for="addCompany1">所属公司：</label>
         </div>
         <div class="ui-g-8">
-          <input pInputText  id="addCompany1" (click)="CompanyTreeClick()" class="addAreaNameInput" [(ngModel)]="this.Companylabel"  placeholder="请选择公司...">
+          <input pInputText  id="addCompany1" (click)="CompanyTreeClick()" class="addAreaNameInput" [(ngModel)]="this.modifyDuty.organizationName"  placeholder="请选择公司...">
         </div>
       </div>
       <!--所属部门-->
@@ -144,7 +144,7 @@
           <label for="addDep1">所属部门：</label>
         </div>
         <div class="ui-g-8">
-          <input pInputText  id="addDep1" (click)="departmentTreeClick()" [(ngModel)]="this.Departmentlabel" placeholder="请选择部门...">
+          <input pInputText  id="addDep1" (click)="departmentTreeClick()" [(ngModel)]="this.modifyDuty.deptName" placeholder="请选择部门...">
         </div>
       </div>
       <!--上级职务-->
@@ -153,7 +153,7 @@
           <label for="addpid1">上级职务：</label>
         </div>
         <div class="ui-g-8">
-          <input pInputText  id="addpid1" (click)="dutyTreeClick()" [(ngModel)]="this.Dutylabel"  placeholder="请选择职位...">
+          <input pInputText  id="addpid1" (click)="dutyTreeClick()" [(ngModel)]="this.pdutyName"  placeholder="请选择职位...">
         </div>
       </div>
       <!--职务名称-->
